--- a/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">ITalent</a>
+        <a class="navbar-brand" href="">Frontend</a>
     </div>
 </div>
 
@@ -10,7 +10,7 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span>Home
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
 
@@ -19,16 +19,16 @@
                 💼 Work Proposals
             </NavLink>
             <NavLink class="nav-link" href="talent-management">
-                🥇 Talents
+                🥇 Talentos
             </NavLink>
             <NavLink class="nav-link" href="user-info">
-                👨‍💼 User's Info
+                👨‍💼 User Profile
             </NavLink>
             <NavLink class="nav-link" href="skill-management">
                 🛠️ Skills
             </NavLink>
             <NavLink class="nav-link" href="reports">
-                📊 Reports
+                📊 Relatórios
             </NavLink>
         </div>
     </nav>
