--- a/Frontend/Components/Pages/AddUsers.razor
+++ b/Frontend/Components/Pages/AddUsers.razor
@@ -6,41 +6,39 @@
 @inject ApiHelper ApiHelper
 
 @rendermode InteractiveServer
+<PageTitle>Add User</PageTitle>
 
-<h2>Add User</h2>
 
-<div class="card mb-4">
-    <div class="card-body">
-        <EditForm Model="@userModel" OnValidSubmit="HandleValidSubmit">
-            <DataAnnotationsValidator />
-            <ValidationSummary />
+<h1>Add User</h1>
 
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <InputText id="username" class="form-control" @bind-Value="userModel.Username" />
-            </div>
+<EditForm Model="@userModel" OnValidSubmit="HandleValidSubmit">
+    <DataAnnotationsValidator />
+    <ValidationSummary />
 
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <InputText id="password" type="password" class="form-control" @bind-Value="userModel.Password" />
-            </div>
-
-            <div class="form-group">
-                <label for="role">Role:</label>
-                <InputSelect id="role" class="form-control" @bind-Value="userModel.RoleId">
-                    <option value="1">Admin</option>
-                    <option value="2">UserManager</option>
-                    <option value="3">User</option>
-                </InputSelect>
-            </div>
-
-            <div class="mt-3">
-                <button type="submit" class="btn btn-success">Add</button>
-                <NavLink class="btn btn-secondary ms-2" href="user-info">Cancel</NavLink>
-            </div>
-        </EditForm>
+    <div class="form-group">
+        <label for="username">Username:</label>
+        <InputText id="username" class="form-control" @bind-Value="userModel.Username" />
     </div>
-</div>
+
+    <div class="form-group">
+        <label for="password">Password:</label>
+        <InputText id="password" type="password" class="form-control" @bind-Value="userModel.Password" />
+    </div>
+
+    <div class="form-group">
+        <label for="role">Role:</label>
+        <InputSelect id="role" class="form-control" @bind-Value="userModel.RoleId">
+            <option value="1">Admin</option>
+            <option value="2">UserManager</option>
+            <option value="3">User</option>
+        </InputSelect>
+    </div>
+
+    <div class="mt-3">
+        <button type="submit" class="btn btn-primary">Save</button>
+        <NavLink class="btn btn-secondary ms-2" href="user-info">Cancel</NavLink>
+    </div>
+</EditForm>
 
 @if (!string.IsNullOrEmpty(successMessage))
 {
