Revert "side bar escondida da página de login e create-account"
This reverts commit 5076d6bea55fea48ee481b6bcdd0e7f44ab2a87c.

--- a/Frontend/Components/Layout/MainLayout.razor
+++ b/Frontend/Components/Layout/MainLayout.razor
@@ -5,40 +5,26 @@
 @inject NavigationManager Navigation
 @inject LoginEventService LoginEvents
 
-@inject NavigationManager NavManager
-
-
 <div class="page">
-  @if (!IsAuthPage)
-  {
-  <div class="sidebar">
-    <NavMenu />
-  </div>
-  }
-
+    <div class="sidebar"><NavMenu/></div>
   <main>
-    @if (!IsAuthPage)
+    @if (_showTopBar)
     {
-    <div class="top-row px-4">
-      <NavLink href="">Home</NavLink>
-      @if (_isLoggedIn)
-      {
-      <NavLink @onclick="Logout">Logout</NavLink>
-      }
-      else
-      {
-      <NavLink href="login">Login</NavLink>
-      }
-      <a href="https://learn.microsoft.com/aspnet/core/" target="_blank" class="ml-4">About</a>
-    </div>
+      <div class="top-row px-4">
+        <NavLink href="">Home</NavLink>
+        @if (_isLoggedIn)
+        {
+          <NavLink @onclick="Logout">Logout</NavLink>
+        }
+        else
+        {
+          <NavLink href="login">Login</NavLink>
+        }
+      </div>
     }
-
-    <article class="content px-4">
-      @Body
-    </article>
+    <article class="content px-4">@Body</article>
   </main>
 </div>
-
 
 <div id="blazor-error-ui">
   An unhandled error has occurred.
@@ -47,17 +33,6 @@
 </div>
 
 @code {
-  private bool IsAuthPage
-  {
-    get
-    {
-      var page = NavManager
-        .ToBaseRelativePath(NavManager.Uri)
-        .Split('?', '#')[0]
-        .ToLowerInvariant();
-      return page == "login" || page == "create-account";
-    }
-  }
   private bool _isLoggedIn;
   private bool _showTopBar;
   private bool _rendererReady;
